--- a/core/build.gradle
+++ b/core/build.gradle
@@ -29,8 +29,11 @@ dependencies {
     testApi 'junit:junit:4.12'
     androidTestApi 'com.android.support.test:runner:1.0.1'
     androidTestApi 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    api 'com.android.support:multidex:1.0.3'
     api 'com.android.support.constraint:constraint-layout:1.0.2'
     api 'com.android.support:appcompat-v7:26.1.0'
     api 'com.android.support:design:26.1.0'
+
+    api 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
