--- a/example/build.gradle
+++ b/example/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.example.guava"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -12,6 +12,14 @@ android {
 
         //Enabling multidex support.
         multiDexEnabled true
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
+    }
+    dexOptions {
+        incremental true
     }
     buildTypes {
         release {
@@ -22,9 +30,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile project(path: ':qrcode')
-    implementation project(':materialdesign')
-    implementation project(':core')
+    compile project(':qrcode')
+    compile project(':materialdesign')
+    compile project(':core')
+    compile 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.alibaba:arouter-api:1.3.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
 }
