--- a/qrcode/build.gradle
+++ b/qrcode/build.gradle
@@ -4,12 +4,18 @@ android {
     compileSdkVersion 26
     resourcePrefix "qrcode_"
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ moduleName : project.getName() ]
+            }
+        }
     }
 
     buildTypes {
@@ -27,4 +33,7 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.1'
     implementation project(':core')
+
+    implementation 'com.alibaba:arouter-api:1.3.1'
+    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
 }
