add hencoder module,study custom widget

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':example', ':qrcode', ':materialdesign', ':core', ':sourcecode'
+include ':example', ':qrcode', ':materialdesign', ':core', ':sourcecode', ':hencoder'
