--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     //网络请求依赖
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api 'com.squareup.okio:okio:1.14.0'
+
+    api 'com.orhanobut:logger:2.2.0'
 }
