新建recyclerview相关知识的代码，提交了Itemtouchhelper的代码，扩展了类似QQ的侧滑删除，但是有bug未完成。

--- a/materialdesign/src/main/AndroidManifest.xml
+++ b/materialdesign/src/main/AndroidManifest.xml
@@ -6,5 +6,6 @@
         <activity android:name="com.example.MaterialDesignActivity"/>
         <activity android:name="com.example.behavior.lesson01.BehaviorActivity"/>
         <activity android:name="com.example.behavior.lesson02.CustomFloatingActionButtonActivity"/>
+        <activity android:name="com.example.recyclerview.RecyclerActivity"/>
     </application>
 </manifest>
