添加 treelist结构列表的显示以及带有checkbox列表展示

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
     implementation project(':hencoder')
     implementation project(':sourcecode')
+    implementation project(':widget')
 }
