--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,9 @@
-include ':example', ':qrcode', ':materialdesign', ':core', ':sourcecode', ':hencoder',':widget'
+include ':example'
+include ':qrcode'
+include ':materialdesign'
+include ':core'
+include ':sourcecode'
+include ':hencoder'
+include ':widget'
+include ':annotation'
+include ':compiler'
